# glboot

./: .gitignore  Cargo.toml  LICENSE  README.md  renderdoc  roadmap.org
assets/models/: simpler_dragon.glb
assets/shaders/: basic_ads.glsl  cel_outline.glsl  celshade.glsl  cube.glsl  cubev.glsl  environ.glsl  environf.glsl  environv.glsl  flat.glsl  flat_post.glsl  flatf.glsl  flattex.glsl  flattexf.glsl  flattexv.glsl  flatv.glsl  frag.glsl  postprocessing.glsl  shader.glsl  vertex.glsl
assets/shaders/post/: bw.glsl  kernel.glsl  negative.glsl  sobel.glsl
assets/shaders/procedural/: bricks.glsl  metallic.glsl
benches/: models_bench.rs
shadersrc/: frag.glsl
src/: aabb.rs  camera.rs  lib.rs  macros.rs  main.rs  ui.rs  window.rs
src/core/: arcball.rs  camera.rs  mod.rs  window.rs
src/ogl/: material.rs  mod.rs  program.rs  renderer.rs  shaders.rs  texture.rs
src/ogl/buffers/: array.rs  framebuffer.rs  index.rs  mod.rs  vertex.rs
src/ogl/model/: loaders.rs  mesh.rs  mod.rs  model.rs  obj.rs  vertex_data.rs
src/ogl/texture/: mod.rs  tex1d.rs  tex2d.rs  tex3d.rs
src/scene/: animations.rs  mesh.rs  mod.rs  node.rs  scene.rs  skin.rs
