[package]
name = "glboot"
version = "0.1.0"
authors = ["Jonatas <jbmagalhaes28@gmail.com>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glfw = "0.38.0"
imgui = "0.4.0"
imgui-opengl-renderer = "0.8.0"
cgmath = "0.17.0"
image = "0.23.5"
tobj = "2.0.2"
rayon = "1.3.0"
gltf = "0.15"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "models_bench"
harness = false
