[package]
name = "glboot"
version = "0.1.0"
authors = ["Jonatas <jbmagalhaes28@gmail.com>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glfw = "0.41.0"
imgui = "0.6.1"
imgui-opengl-renderer = "0.10.0"
cgmath = "0.17.0"
image = "0.23.14"
rayon = "1.5.1"
gltf = "0.16"
thiserror = "1.0.26"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "models_bench"
harness = false
